--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,8 @@ dependencies = [
   "fastapi>=0.104.1",
   "httpx>=0.25",
   "uvicorn>=0.23.2",
-  "pyarrow>=14.0.1"
+  "pyarrow>=14.0.1",
+  "pyzipper>=0.3.6"
 ]
 
 [project.scripts]
