Fix packaging for 0.4.0 and add wheel regression test

--- a/config.toml
+++ b/config.toml
@@ -3,3 +3,7 @@ storage_root = "storage"
 theme = "system"
 host = "127.0.0.1"
 port = 8000
+source_dir = "routes_src"
+build_dir = "routes_build"
+auto_compile = true
+watch = false
