--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,3 +32,6 @@ build-backend = "setuptools.build_meta"
 [tool.setuptools.packages.find]
 where = ["."]
 include = ["webbed_duck*"]
+
+[tool.setuptools.package-data]
+"webbed_duck.static.chartjs" = ["LICENSE"]
