Bundle Chart.js asset with package

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,4 +34,4 @@ where = ["."]
 include = ["webbed_duck*"]
 
 [tool.setuptools.package-data]
-"webbed_duck.static.chartjs" = ["LICENSE"]
+"webbed_duck.static.chartjs" = ["LICENSE", "chart.umd.min.js"]
