--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
   "uvicorn>=0.23.2",
   "pyarrow>=14.0.1",
   "pyzipper>=0.3.6",
+  "markdown>=3.5",
   "tzdata; platform_system == \"Windows\""
 ]
 
