Add support for constants and secrets in route SQL

--- a/config.toml
+++ b/config.toml
@@ -8,3 +8,6 @@ source_dir = "routes_src"
 build_dir = "routes_build"
 auto_compile = true
 watch = false
+
+[server.constants]
+data_root = "./data"
