--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
   "pyarrow>=14.0.1",
   "pyzipper>=0.3.6",
   "markdown>=3.5",
+  "keyring>=24.3",
   "tzdata; platform_system == \"Windows\""
 ]
 
