Implement two-phase interpolation checks and binding filtering

--- a/routes_src/hello.toml
+++ b/routes_src/hello.toml
@@ -9,6 +9,7 @@ methods = ["GET"]
 type = "str"
 required = false
 default = "world"
+template_only = true
 description = "Name to greet"
 ui_control = "input"
 ui_label = "Name"
