Switch complexity chart to SVG and add asset workflow

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
   "pyzipper>=0.3.6",
   "keyring>=24.2",
   "markdown>=3.5",
+  "matplotlib>=3.9",
   "tzdata; platform_system == \"Windows\"",
 ]
 
